# circle-plonk-recursive-verifier-circom

./: .gitignore  Cargo.toml  README.md
channel/: Cargo.toml  channel.circom  test.circom
channel/src/: main.rs
circle/: fields.circom  test.circom  test.sh
components/decommit/: Cargo.toml  decommit.circom  test.circom  test.sh
components/decommit/src/: main.rs
components/fiat_shamir/: Cargo.toml  fiat_shamir.circom  test.circom
components/fiat_shamir/src/: main.rs
components/folding/: folding.circom  test.circom
components/folding/src/: main.rs
components/hints/: Cargo.toml
components/hints/src/: decommit.rs  folding.rs  prepare.rs  quotient.rs
components/prepare/: constraint_num.circom  pair_vanishing.circom  prepare.circom  test.circom  test.sh
components/prepare/src/: main.rs
components/quotient/: num.circom  pair_vanishing.circom  quotient.circom  test.circom  test.sh
components/quotient/src/: main.rs
integration/: Cargo.toml  integration.circom  test.sh
integration/fiat_shamir/: Cargo.toml  fiat_shamir.circom  test.sh
integration/fiat_shamir/src/: main.rs
integration/folding/: Cargo.toml  apply_column_line_coeffs.circom  folding.circom  ibutterfly.circom  num_composition.circom  num_constant.circom  num_interaction.circom  num_interaction_shifted.circom  num_trace.circom  test.sh
integration/folding/src/: main.rs
integration/hints/: Cargo.toml
integration/hints/src/: fiat_shamir.rs  folding.rs  lib.rs  prepare.rs  quotient.rs
integration/prepare/: Cargo.toml  column_line_coeffs.circom  constraint_denom.circom  constraint_num.circom  pair_vanishing.circom  prepare.circom
integration/prepare/src/: main.rs
integration/quotient/: Cargo.toml  num_interaction.circom  num_trace.circom  pair_vanishing.circom  quotient.circom
integration/quotient/src/: main.rs
integration/src/: main.rs
poseidon31/: Cargo.toml  params.circom  poseidon31_permute.circom  test.circom
primitives/bits/: Cargo.toml  bits.circom  test.circom
primitives/bits/src/: main.rs
primitives/channel/: Cargo.toml  channel.circom  test.circom
primitives/circle/: Cargo.toml  curve.circom  fields.circom  test.circom
primitives/circle/src/: main.rs
primitives/merkle/: Cargo.toml  merkle.circom  test.circom  test.sh
primitives/merkle/src/: main.rs
primitives/poseidon31/: generate_test_data.sh  params.circom  poseidon31_permute.circom  test.circom
primitives/poseidon31/src/: main.rs
