[workspace]
members = ["primitives/poseidon31", "primitives/circle", "primitives/channel", "integration/fiat_shamir"]
resolver = "2"

[workspace.dependencies]
poseidon2-m31 = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/poseidon2-m31.git" }
serde_json = "1.0.133"
rand = "0.8.5"
rand_chacha = "0.3.1"
ark-std = "0.4.0"
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo", branch = "move-mult-in-plonk" }
circle-plonk-lib = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/circle-plonk" }
bincode = "1.3.3"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true